--- a/_config.yml
+++ b/_config.yml
@@ -19,21 +19,26 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Your awesome title
+longtitle: longtitle
+author: HE Tao
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+version:          1.0
+gitbook_version:  3.2.3
 domain: lhwsa2010.github.io  
 baseurl: "/githubpagestest" # the subpath of your site, e.g. /blog
 url: "https://lhwsa2010.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+rss:              RSS
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+#theme: jekyll-gitbook
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -54,3 +59,31 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# markdown render engine.
+markdown:         kramdown
+kramdown:
+  auto_ids:               true
+  input:                  GFM
+  math_engine:            mathjax
+  smart_quotes:           lsquo,rsquo,ldquo,rdquo
+  toc_levels:             1..6
+  syntax_highlighter:     rouge
+  syntax_highlighter_opts:
+    guess_lang:           true
+
+markdown_ext:     markdown,mkdown,mkdn,mkd,md
+
+# Permalinks
+permalink:        /:categories/:year-:month-:day-:title:output_ext
+
+exclude:
+  - _drafts
+
+destination:      ./_site
+incremental:      false
+regenerate:       true
+
+plugins:
+  - jemoji
+  
